@@ -1,3 +1,7 @@
+2008-01-18  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* Sybase.py: Better thread safety
+
 2008-01-04  Sébastien Sablé  <sable@users.sourceforge.net>
 
 	* setup.py: the C API to datetime only exists since python 2.4 - disable datetime with previous versions
